unpackaged/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Mobile_no__c</fullName>
        <formula>Applicant__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Mobile no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category </label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DSA</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>New Customer </fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Other Referral Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_GeoLocation__c</fullName>
        <label>Check In GeoLocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_In_Location__c</fullName>
        <label>Check In Location</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Out_GeoLocation__c</fullName>
        <label>Check Out GeoLocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Location__c</fullName>
        <label>Check Out Location</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_in_Time__c</fullName>
        <label>Check-in Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_out_Time__c</fullName>
        <label>Check-out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collection_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Task</label>
        <referenceTo>Collection_Task__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_of_Person_Met__c</fullName>
        <label>Contact Number of Person Met</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DSA_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSA/Connector</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distance_Traveled_In_km__c</fullName>
        <label>Distance Traveled In km</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Agenda__c</fullName>
        <label>Meeting Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Details__c</fullName>
        <label>Meeting Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Meeting_Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Rate of Interest Issue</fullName>
                </value>
                <value>
                    <fullName>Loan Amount Issue</fullName>
                </value>
                <value>
                    <fullName>Tenor Issue</fullName>
                </value>
                <value>
                    <fullName>PF Issue</fullName>
                </value>
                <value>
                    <fullName>Insurance Cost</fullName>
                </value>
                <value>
                    <fullName>BT Cost</fullName>
                </value>
                <value>
                    <fullName>Documentation Issue</fullName>
                </value>
                <value>
                    <fullName>Client Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Property not acceptable</fullName>
                </value>
                <value>
                    <fullName>Policy norms not met</fullName>
                </value>
                <value>
                    <fullName>Negative Profile</fullName>
                </value>
                <value>
                    <fullName>Poor RTR</fullName>
                </value>
                <value>
                    <fullName>Poor Banking</fullName>
                </value>
                <value>
                    <fullName>Poor CIBIL</fullName>
                </value>
                <value>
                    <fullName>Rescheduled date</fullName>
                </value>
                <value>
                    <fullName>Rescheduled time</fullName>
                </value>
                <value>
                    <fullName>Customer Interested</fullName>
                </value>
                <value>
                    <fullName>Customer Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Outcome__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Client Not Interested</fullName>
                </value>
                <value>
                    <fullName>Appointment Re-scheduled / Collection pending / Client not met</fullName>
                </value>
                <value>
                    <fullName>Automation to create the meeting plan</fullName>
                </value>
                <value>
                    <fullName>Lead Generation( DSA )</fullName>
                </value>
                <value>
                    <fullName>Lead Generation( Connector )</fullName>
                </value>
                <value>
                    <fullName>Document Collected to fetch CIBIL</fullName>
                </value>
                <value>
                    <fullName>Cat A checklist document collected partially</fullName>
                </value>
                <value>
                    <fullName>Cat A checklist document collected fully</fullName>
                </value>
                <value>
                    <fullName>Sales PD Done</fullName>
                </value>
                <value>
                    <fullName>Property Visit Done</fullName>
                </value>
                <value>
                    <fullName>Pre-Queries given</fullName>
                </value>
                <value>
                    <fullName>Pre-Queries resolved</fullName>
                </value>
                <value>
                    <fullName>Credit PD Visit done</fullName>
                </value>
                <value>
                    <fullName>Post PD Queries given</fullName>
                </value>
                <value>
                    <fullName>Post PD Queries resolved</fullName>
                </value>
                <value>
                    <fullName>Disbursement documentation collected partially</fullName>
                </value>
                <value>
                    <fullName>Disbursement documentation collected fully</fullName>
                </value>
                <value>
                    <fullName>OTC / PDD documents collected partially</fullName>
                </value>
                <value>
                    <fullName>OTC / PDD documents collected fully</fullName>
                </value>
                <value>
                    <fullName>Reference collected</fullName>
                </value>
                <value>
                    <fullName>EMI Partially collected</fullName>
                </value>
                <value>
                    <fullName>EMI fully collected</fullName>
                </value>
                <value>
                    <fullName>PTP</fullName>
                </value>
                <value>
                    <fullName>Lead Generation( Customer )</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Plan </label>
        <referenceTo>Meeting_Plan__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_Remarks__c</fullName>
        <label>Notes/Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Met__c</fullName>
        <label>Person Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RelatedTo_Count__c</fullName>
        <formula>IF(OR(ISPICKVAL( Category__c ,&apos;Others&apos;),ISPICKVAL( Category__c ,&apos;Other Referral Source&apos;)),1 ,0)+
IF(ISBLANK(Collection_Task__c),0,1) +
IF(ISBLANK(Loan_Account__c),0,1) +
IF(ISBLANK(DSA_Connector__c),0,1) +
IF(ISBLANK(Applicant__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedTo Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Time__c</fullName>
        <label>Scheduled End Time </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time__c</fullName>
        <label>Scheduled Start Time </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Re-Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TL_Remark__c</fullName>
        <label>TL Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Task </fullName>
                </value>
                <value>
                    <fullName>Meeting </fullName>
                </value>
                <value>
                    <fullName>Other </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>owner_name__c</fullName>
        <formula>Owner:User.FirstName+ &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>owner name</label>
        <type>Text</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Plan__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Scheduled_Start_Time__c</columns>
        <columns>Salesperson__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>completed_meetings</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Meeting_Outcome__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>completed meetings</label>
    </listViews>
    <nameField>
        <displayFormat>MEET-{0000}</displayFormat>
        <label>Meeting #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>In_Progress_Completed_Meetings</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Status__c, &apos;Completed&apos;), ISPICKVAL(Status__c, &apos;In Progress&apos;))
&amp;&amp; ISCHANGED(Salesperson__c)</errorConditionFormula>
        <errorMessage>In Progress/Completed Meetings cannot be re-assigned</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Person_Met_and_Meeting_Outcome_can_only</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !ISPICKVAL (Status__c, &quot;Completed&quot; ),
 !ISNULL(Text(Meeting_Outcome__c)))</errorConditionFormula>
        <errorMessage>Meeting Outcome can only be added for &apos;Completed&apos; meetings</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referral_source_name_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
( ISPICKVAL( Category__c ,&apos;Others&apos;) || ISPICKVAL(Category__c , 
  &apos;Other Referral Source&apos;) ),
ISBLANK( Referral_Source__c )
)</errorConditionFormula>
        <errorDisplayField>Referral_Source__c</errorDisplayField>
        <errorMessage>Referral Source Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_To_Required</fullName>
        <active>true</active>
        <errorConditionFormula>RelatedTo_Count__c =0</errorConditionFormula>
        <errorMessage>Please select the record related to Meeting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduled_End_Time_Should_be_Greater</fullName>
        <active>true</active>
        <errorConditionFormula>Scheduled_End_Time__c &lt;=  Scheduled_Start_Time__c</errorConditionFormula>
        <errorMessage>Scheduled End Time Should be Greater than Scheduled Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scheduled_Start_Time_Should_be_Greater</fullName>
        <active>true</active>
        <errorConditionFormula>(Scheduled_Start_Time__c &lt; NOW() ) &amp;&amp;
ISNEW()</errorConditionFormula>
        <errorMessage>Scheduled Start Time Should be Greater than Equal to Current Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>resheading_meeting</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status__c,&apos;Re-Scheduled&apos;) &amp;&amp; TIMEVALUE(Scheduled_Start_Time__c)&lt;  TIMENOW()</errorConditionFormula>
        <errorMessage>change the sch time</errorMessage>
    </validationRules>
</CustomObject>